test having error publishing gem after deleting some empty files

--- a/lib/Gemfile
+++ b/lib/Gemfile
@@ -8,10 +8,9 @@ git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 gem "tty-prompt"
 gem "tty-table"
 gem "tty-box"
-Gem "colorize"
+gem "colorize"
 gem "artii"
 gem "simplecov"
 gem "jeweler"
 gem "fileutils"
 
-gem "colorize", "~> 0.8.1"
